# pypeline-cli

./: CLAUDE.md  README.md  REFACTOR_PLAN.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
scripts/: create_test_project.py
src/pypeline_cli/: _version.py  config.py  main.py
src/pypeline_cli/commands/: build.py  init.py  install.py  sync_deps.py
src/pypeline_cli/core/: create_project.py
src/pypeline_cli/core/managers/: dependencies_manager.py  processor_manager.py  project_context.py  toml_manager.py
src/pypeline_cli/templates/: dependencies.py.template
src/pypeline_cli/templates/init/: table_cache.py.template
src/pypeline_cli/templates/processors/: processor.py.template
src/pypeline_cli/utils/: valdators.py
